--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/images/logo.gif
     - assets/images/Imiot.png
     - assets/images/profile.gif
+    - assets/images/Search.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
