--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
     - assets/images/Imiot.png
     - assets/images/profile.gif
     - assets/images/Search.png
+    - assets/images/image 1.png
+    - assets/images/Less Than.png
+    - assets/images/Rectangle 8.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
